# disraptor

./: README.md  plugin.rb
app/controllers/: disraptor_config_controller.rb  disraptor_proxy_controller.rb  disraptor_routes_controller.rb  proxy_controller.rb  routes_controller.rb
app/controllers/disraptor/: proxy_controller.rb  routes_controller.rb
app/models/: route.rb
assets/javascripts/discourse/: disraptor-admin-route-map.js.es6  disraptor-route-map.js.es6  preferences-route-map.js.es6
assets/javascripts/discourse/components/: route-preview.js.es6
assets/stylesheets/: disraptor-plugin.scss  disraptor-view.scss  disraptor.css  disraptor.scss
config/: settings.yml
config/locales/: client.en.yml  server.en.yml
discourse-client-in-disraptor/: .gitignore  Makefile  README.md  setup.cfg
discourse-client-in-disraptor/discourse_client_in_disraptor/: __init__.py  discourse_api_client.py  third_party_integrations.py
discourse-client-in-disraptor/tests/: test_parsing_of_disraptor_group.py
docs/: deploy-discourse-with-disraptor.md  discourse-setting-up-client-side-and-server-side-routes.md  discourse-setup-development-environment-ubuntu.md  disraptor-deploy-discourse.md  disraptor-limitations-for-documents-and-resources.md  index.md  setup-a-discourse-development-environment-ubuntu.md
lib/: group_store.rb  route_store.rb
spec/controllers/disraptor/: routes_controller_spec.rb
spec/lib/: route_store_spec.rb
spec/models/: route_spec.rb
spec/requests/: proxy_controller_spec.rb
test/javascripts/acceptance/: disraptor-plugin-page-test.js.es6
(+14 files in other folders)
