[metadata]
name = discourse_client_in_disraptor
version = attr: discourse_client_in_disraptor.__version__
author = Maik Fröbe
author_email = maik.froebe@uni-weimar.de
maintainer = Maik Fröbe
description = Simple access to the discourse API required to use Disraptor.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/disraptor/disraptor
project_urls =
    Bug Tracker = https://github.com/disraptor/disraptor/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.7
include_package_data = True
packages = find:
install_requires =
    requests>=2.26,==2.*

[options.extras_require]
test =
    pytest>=6.2,==6.*
    pytest-cov>=3.0,==3.*

